--- a/frontend/app/partials/index/index.jade
+++ b/frontend/app/partials/index/index.jade
@@ -2,4 +2,4 @@ md-content(style='height: 100%;')
     md-toolbar.md-hue-2
         h2.md-toolbar-tools Viewer
     md-content(style='height: 100%;')
-        viewer
+        points-view
